Fixed layout issues

--- a/src/components/main/Home/Home.scss
+++ b/src/components/main/Home/Home.scss
@@ -1,6 +1,6 @@
 .hero {
   width: 100%;
-  height: 100vh;
+  height: 70vh;
   background-size: cover;
   position: relative;
   border-style: none;
@@ -8,12 +8,19 @@
 
   &:before {
     content: '';
-    background: rgba(0, 0, 0, 0, 0.6);
     position: absolute;
     bottom: 0;
     top: 0;
     left: 0;
     right: 0;
+  }
+
+  h1 {
+    margin: 30px 0 10px 0;
+    font-size: 48px;
+    font-weight: 500;
+    line-height: 56px;
+    text-transform: uppercase;
   }
 }
 
@@ -28,15 +35,6 @@
   align-items: center;
   flex-direction: column;
   text-align: center;
-
-  h1 {
-    margin: 30px 0 10px 0;
-    font-size: 48px;
-    font-weight: 500;
-    line-height: 56px;
-    text-transform: uppercase;
-    color: #f7fffd;
-  }
 
   h2 {
     color: #f67280;
@@ -64,8 +62,7 @@
   border-radius: 50%;
   border: 2px solid #f67280;
 
-  i {
-    color: #f67280;
-    font-size: 36px;
+  &:hover {
+    cursor: pointer;
   }
 }
